# rocprofiler-sdk

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
samples/: CMakeLists.txt
samples/advanced_thread_trace/: CMakeLists.txt  client.cpp  main.cpp  transpose_kernels.hpp
samples/api_buffered_tracing/: CMakeLists.txt  README.md  client.cpp  client.hpp  main.cpp
samples/api_callback_tracing/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
samples/api_callback_tracing_memcpy_bug/: BUG_DESCRIPTION  CMakeLists.txt  client.cpp  client.hpp
samples/apps/transpose/: transpose.cpp
samples/code_object_isa_decode/: CMakeLists.txt  client.cpp  main.cpp
samples/code_object_tracing/: CMakeLists.txt  client.cpp  main.cpp
samples/common/: CMakeLists.txt  call_stack.hpp  defines.hpp  filesystem.hpp  name_info.hpp
samples/counter_collection/: CMakeLists.txt  agent_profiling.cpp  callback_client.cpp  client.cpp  client.hpp  device_counting.cpp  main.cpp  print_functional_counters.cpp  test_counter_client.cpp
samples/external_correlation_id_request/: CMakeLists.txt  README.md  client.cpp  client.hpp  main.cpp
samples/intercept_table/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
samples/pc_sampling/: CMakeLists.txt  client.cpp  common.h  main.cpp  pcs.cpp  pcs.hpp  single-user-host-trap-retries-service-instantiation.cpp  single-user-host-trap.cpp  single-user-multiple-agents.cpp  utils.cpp  utils.hpp
source/docs/: .gitignore  CMakeLists.txt  README.md  _toc.yml.in  about.md  buffered_services.md  buffered_tracing.md  callback_services.md  callback_tracing.md  conf.py  counter_collection_services.md  developer_api.md  environment.yml  features.md  generate-doxyfile.cmake  getting_started.md  index.md  index.rst  installation.md  intercept_table.md  pc_sampling.md  requirements.txt  rocprofiler-sdk.dox  rocprofiler-sdk.dox.in  rocprofiler.dox.in  rocprofv3-schema.json  rocprofv3.md  rocprofv3_input_schema.json  samples.md  tool_library_overview.md  what-is-rocprof-sdk.rst
source/docs/api-reference/: buffered_services.md  callback_services.md  counter_collection_services.md  intercept_table.md  pc_sampling.md  tool_library.md
source/docs/conceptual/: comparing-with-legacy-tools.rst
source/docs/data/: counter_collection.csv  hip_api_stats.csv  hip_compile_trace.csv  hip_runtime_trace.csv  hsa_api_trace.csv  kernel_names.csv  kernel_trace.csv  marker_api_trace.csv  memory_copy_trace.csv
source/docs/how-to/: samples.md  using-rocprofv3.rst
source/docs/install/: installation.md
source/docs/sphinx/: requirements.txt
source/include/rocprofiler/: CMakeLists.txt  agent.h  agent_profile.h  buffer.h  buffer_tracing.h  callback_tracing.h  config.h  context.h  counters.h  defines.h  dispatch_profile.h  external_correlation.h  fwd.h  hip.h  hsa.h  intercept_table.h  internal_threading.h  marker.h  pc_sampling.h  profile_config.h  registration.h  rocprofiler.h  rocprofiler_plugin.h  spm.h  version.h.in
source/include/rocprofiler-sdk-roctx/: CMakeLists.txt  api_trace.h  defines.h  roctx.h  types.h  version.h.in
source/lib/: CMakeLists.txt
source/lib/common/: CMakeLists.txt  abi.hpp  config.cpp  config.hpp  defines.hpp  demangle.cpp  demangle.hpp  elf_utils.cpp  elf_utils.hpp  environment.cpp  environment.hpp  filesystem.hpp  helper.cpp  helper.hpp  join.hpp  log.hpp  logging.cpp  logging.hpp  mpl.hpp  scope_destructor.hpp  static_object.cpp  static_object.hpp  static_tl_object.hpp  string_entry.cpp  string_entry.hpp  stringize_arg.hpp  synchronized.hpp  units.hpp  utility.cpp  utility.hpp  xml.cpp  xml.hpp
source/lib/rocprofiler-sdk/: CMakeLists.txt  agent.cpp  agent.hpp  agent_profile.cpp  allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  buffer_tracing.cpp  context.cpp  (+16 more)
source/lib/rocprofiler-sdk-codeobj/: CMakeLists.txt  LICENSE  README.md  code_object_track.cpp  code_object_track.hpp  code_printing.cpp  code_printing.hpp  disassembly.cpp  disassembly.hpp  segment.hpp
source/lib/rocprofiler-sdk-roctx/: CMakeLists.txt  roctx.cpp
source/lib/rocprofiler-sdk-tool/: CMakeLists.txt  README.md  buffered_output.hpp  config.cpp  config.hpp  csv.hpp  domain_type.cpp  domain_type.hpp  generateCSV.cpp  generateCSV.hpp  generateJSON.cpp  generateJSON.hpp  generateOTF2.cpp  generateOTF2.hpp  generatePerfetto.cpp  generatePerfetto.hpp  generateStats.cpp  generateStats.hpp  helper.cpp  helper.hpp  main.c  output_file.cpp  output_file.hpp  statistics.cpp  statistics.hpp  tmp_file.cpp  tmp_file.hpp  tmp_file_buffer.cpp  tmp_file_buffer.hpp  tool.cpp  trace_buffer.hpp
tests/: CMakeLists.txt
tests/apps/: CMakeLists.txt
tests/async-copy-tracing/: CMakeLists.txt  conftest.py  pytest.ini  validate.py
tests/c-tool/: CMakeLists.txt
tests/common/: CMakeLists.txt  defines.hpp  filesystem.hpp  hash.hpp  name_info.hpp  perfetto.hpp  serialization.hpp
tests/counter-collection/: CMakeLists.txt  conftest.py  pytest.ini  validate.py
tests/hip-graph-tracing/: CMakeLists.txt  conftest.py  validate.py
tests/kernel-tracing/: CMakeLists.txt  conftest.py  kernel-tracing.cpp  pytest.ini  serialization.hpp  validate.py
tests/lib/: CMakeLists.txt
tests/page-migration/: CMakeLists.txt  conftest.py  pytest.ini  validate.py
tests/pc_sampling/: CMakeLists.txt  address_translation.cpp  address_translation.hpp  cid_retirement.cpp  cid_retirement.hpp  client.cpp  client.hpp  codeobj.cpp  codeobj.hpp  external_cid.cpp  external_cid.hpp  kernel_tracing.cpp  kernel_tracing.hpp  main.cpp  pcs.cpp  pcs.hpp  utils.cpp  utils.hpp
tests/pytest-packages/: CMakeLists.txt
tests/rocprofv3/: CMakeLists.txt
tests/scratch-memory-tracing/: CMakeLists.txt  conftest.py  validate.py
tests/thread-trace/: CMakeLists.txt  agent_test.cpp  common.hpp  kernel_branch.cpp  kernel_lds.cpp  kernel_run.cpp  main.cpp  multi_dispatch.cpp  single_dispatch.cpp  trace_callbacks.cpp  verify_data.cpp
tests/tools/: CMakeLists.txt  c-tool.c  json-tool.cpp
(+631 files in other folders)
